Bug/25378/subject and back button not aligned correctly (#5565)
* Remove boilerplate of back button and aligning it.

* Not related but fixing a line height issue with the info row

* fixing that the left outer border auf type and subject were not shown on hover

* align subject input field text with type text (to sit on same bottom line)

* Align and style back button like other toolbar buttons

* Align type and subject read text to vertical center. Decrease hover border box to sizes of other buttons in toolbar.

* Fix bug #25397 and improve layouting for mobile screens

[ci skip]

* Improve positioning for all but Mac Chrome


[ci skip]

--- a/app/assets/stylesheets/content/work_packages/single_view/_single_view.sass
+++ b/app/assets/stylesheets/content/work_packages/single_view/_single_view.sass
@@ -33,6 +33,7 @@
 
 .work-packages--info-row
   font-size: 0.8rem
+  line-height: 1.1rem
   padding: 5px 0
 
 .work-packages--details--title
